--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
+
+
 {
   "name": "mongonews-",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "scraping news",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
