--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "mongonews-",
   "version": "1.0.0",
@@ -7,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "watch": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +26,6 @@
     "mongodb": "^3.5.3",
     "mongojs": "^3.1.0",
     "mongoose": "^5.9.0",
-    "path": "^0.12.7"
+    "morgan": "^1.9.1"
   }
 }
